k8s-security-framework/policies/pod-security/KSP-POD-011/tests/boundary-fail-single-condition.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-011-boundary-ephemeral-additional-boundary-fail
  namespace: policy-test
spec:
  containers:
  - name: secure
    image: harbor.example.com/demo-api:1.0.0
    securityContext:
      readOnlyRootFilesystem: true
  ephemeralContainers:
  - name: debugger
    image: harbor.example.com/demo-api:1.0.0
    command:
    - sh
    securityContext:
      readOnlyRootFilesystem: false
