k8s-security-framework/policies/pod-security/KSP-POD-011/tests/negative-noncompliant-container-last.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-011-negative-last
  namespace: policy-test
spec:
  containers:
    - name: secure
      image: harbor.example.com/demo-api:1.0.0
      securityContext:
        readOnlyRootFilesystem: true
    - name: insecure
      image: harbor.example.com/demo-api:1.0.0
      securityContext:
        readOnlyRootFilesystem: false
